--- a/quickstart/public/index.html
+++ b/quickstart/public/index.html
@@ -2,12 +2,13 @@
 <html>
 <head>
   <title>Twilio Video - Video Quickstart</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">
+  <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">-->
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-<div id="app"></div>
-<script src="index.js"></script>
+    <div id="app"></div>
+   <script src="index.js"></script>
 </body>
 </html>
